Frontend data mogration step which is responsible for temp index deletion.